@@ -66,8 +66,8 @@
 ; From scsh
 ;(define (directory-files [dir [dotfiles?]]) ...)
 
-(define-private *temp-file-number* 1)
-; From MzLib.  Scsh has (crate-temp-file [prefix]).
+(define *temp-file-number* 1)
+; From MzLib.  Scsh has (create-temp-file [prefix]).
 ; This is not safe from race conditions!
 ; Fix this using new Java2 File.createTempFile.  FIXME.
 ; Should not be using /tmp.  FIXME.
